# fjsBOT

./: Dockerfile  README.MD  main.py  pyproject.toml
.github/workflows/: docker-build-push-deploy.yml  docker-image.yml  publish.yml
cogs/: flip.py  rabiat.py  tools.py
commands/: rekruttering.py
